check ulpoad photo

--- a/ProdigyWeb/ProdigyWeb.csproj
+++ b/ProdigyWeb/ProdigyWeb.csproj
@@ -31,7 +31,7 @@
 
   <ItemGroup>
     <Folder Include="DTO\" />
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
