--- a/ProdigyWeb/ProdigyWeb.csproj
+++ b/ProdigyWeb/ProdigyWeb.csproj
@@ -30,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\images\" />
+    <Folder Include="Wwwroot\images\" />
   </ItemGroup>
 
 </Project>
