--- a/ProdigyWeb/appsettings.json
+++ b/ProdigyWeb/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProdigyDB": "Server=localhost\\sqlexpress;Database=ProdigyDB;Trusted_Connection=True;"
+    "ProdigyDB": "Server=(localdb)\\MSSQLLocalDB;Database=ProdigyDB;Trusted_Connection=True;"
   }
 
 }
